<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundLight"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/rf4j41dxpbhl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/backgroundLight">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/rblkpd0z1kjn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="76dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/rg5ul5smjb8"
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:importantForAccessibility="no"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_goto" />

                <TextView
                    android:id="@+id/rxsqub4qg11"
                    android:textColor="@color/textColor"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:layout_marginVertical="20dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/timeless_elegance"
                    />
                <TextView
                    android:id="@+id/rh83u66q9u9n"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    android:layout_marginVertical="4dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/discover_a_curated_collection_of_exquisite_timepieces_crafted_for_every_moment"
                    />
                <LinearLayout
                    android:id="@+id/roxhroqcuf29"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="12dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/rvdbq4idgnhs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/cr12bf2ba0c"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_horizontal"
                        android:minHeight="48dp"
                        android:orientation="vertical"
                        android:padding="0.5dp">

                        <Button
                            android:id="@+id/btnLogin"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/login"
                            android:textColor="@color/textColor"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:background="@color/transparent"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/rh5qayop6q25"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/cr12bf2f2e8"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_horizontal"
                        android:minHeight="48dp"
                        android:orientation="vertical"
                        android:paddingVertical="1dp">

                        <Button
                            android:id="@+id/btnRegister"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/register"
                            android:textColor="@color/textColor"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:background="@color/transparent"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/r6cig4cz7818"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingVertical="1dp"
                        android:layout_marginHorizontal="16dp"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/btnContinueAsGuest"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/continue_as_guest"
                            android:textColor="@color/textColor"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:background="@color/transparent"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/rcosx7w36r3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/roejzzpznbk"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="4dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/by_continuing_you_agree_to_our_terms_of_service_and_privacy_policy"
                    android:textColor="@color/innerTextColor"
                    android:textSize="14sp" />

                <LinearLayout
                    android:id="@+id/r0lc8qj6oe08b"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:background="@color/backgroundLight"
                    android:orientation="vertical">
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
